--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.7
   iconsax: ^0.0.8
   loading_animation_widget: ^1.2.0+4
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
